# pyliblo

./: meson.build  pyproject.toml
scripts/: meson.build
src/: liblo.pyx  meson.build
